--- a/views/home.html
+++ b/views/home.html
@@ -12,28 +12,37 @@
     <title>My Dating Website</title>
 </head>
 <body>
-    <div class="container">
-        <ul>
-            <li><a href="">My Dating Website</a> </li>
-        </ul>
-    <div/>
-    <div id="left" class="container">
-        <h1>My Dating Website</h1>
-        <p>Welcome to our most incredible dating website. At My Dating Website you will find the significant other that
-            you've always dreamed of. Our Website has a really high match rate based on users interests and the location
-            they are looking for. Create a profile to see what everyone else is talking about.
-        </p>
-        <h3>Here is what are users are saying about us.</h3>
-        <hr>
-        <p>Quotes go here</p>
-        <hr>
-        <button type="button">Create a Profile!</button>
+    <nav class="navbar bg-light navbar-light">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="">My Dating Website</a>
+        </div>
+    </nav>
+
+    <div class="border border-dark bg-light col-lg-8 col-md-10 col-sm-12 m-auto text-eli">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1 class="text-center">My Dating Website</h1>
+                    <p>Welcome to our most incredible dating website. At My Dating Website you will find the significant other that
+                        you've always dreamed of. Our Website has a really high match rate based on users interests and the location
+                        they are looking for. Create a profile to see what everyone else is talking about.
+                    </p>
+                    <h4 class="text-center">Here is what are users are saying about us.</h4>
+                    <hr>
+                    <p class="text-center">"I didn't believe that I would find my other half here but I did"-Bob</p>
+                    <p class="text-center">"This webpage is so user friendly and you can easily find people of same
+                        interests near you"-Martha</p>
+                    <hr>
+                    <button class="btn-primary" type="button">Create a Profile!</button>
+                </div>
+
+                <div class="col-6">
+                    <img class="img-thumbnail" src="images/dating.jpg" alt="pic of couple">
+                </div>
+            </div>
+        </div>
 
     </div>
-    <img src="images/dating.jpg" alt="pic of couple">
-
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
