--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<!-- sdev328/dating/views/home.html -->
+<!-- sdev328/dating/views/info.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -33,10 +33,15 @@
                     <p class="text-center">"This webpage is so user friendly and you can easily find people of same
                         interests near you"-Martha</p>
                     <hr>
-                    <button class="btn-primary" type="button">Create a Profile!</button>
+
+                    <div class="row">
+                        <div class="p-2" style="align-items: stretch">
+                            <a type="button" class="btn btn-primary" href="personalinfo">Create a Profile!</a>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-6 border">
                     <img class="img-thumbnail" src="images/dating.jpg" alt="pic of couple">
                 </div>
             </div>
@@ -47,3 +52,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
+
