--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar bg-light navbar-light">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="">My Dating Website</a>
+            <a class="nav-item nav-link" href="home">My Dating Website</a>
         </div>
     </nav>
 
