Made some final changes

--- a/views/interests.html
+++ b/views/interests.html
@@ -16,53 +16,59 @@
     </div>
 </nav>
 
-<h1>Interests</h1>
-<hr>
+<div class="border border-light bg-light col-lg-8 col-md-10 col-sm-12 m-auto text-eli" id="main">
+    <div class="container text-eli">
+        <div class="row">
+            <div id="left" class="border">
+        <h1>Interests</h1>
+        <hr>
+        <form action="#" method="post" class="form-horizontal">
+        <div class="form-group">
+            <h5>Indoor Interests</h5>
+            <div class="d-inline">
+                <input type="checkbox" id="tv" name="interests[]" value="tv">
+                <label for="tv">tv</label>
+                <input type="checkbox" id="movies" name="interests[]" value="movies">
+                <label for="movies">movies</label>
+                <input type="checkbox" id="cooking" name="interests[]" value="cooking">
+                <label for="cooking">cooking</label>
+                <input type="checkbox" id="board games" name="interests[]" value="board games">
+                <label for="board games">board games</label>
+                <input type="checkbox" id="puzzles" name="interests[]" value="puzzles">
+                <label for="puzzles">puzzles</label>
+                <input type="checkbox" id="reading" name="interests[]" value="reading">
+                <label for="reading">reading</label>
+                <input type="checkbox" id="playing cards" name="interests[]" value="playing cards">
+                <label for="playing cards">playing cards</label>
+                <input type="checkbox" id="video games" name="interests[]" value="video games">
+                <label for="video games">video games</label>
+            </div>
+            <h5>Outdoor Interests</h5>
+            <div class="d-inline">
+                <input type="checkbox" id="hiking" name="interests[]" value="hiking">
+                <label for="hiking">hiking</label>
+                <input type="checkbox" id="biking" name="interests[]" value="biking">
+                <label for="biking">biking</label>
+                <input type="checkbox" id="swimming" name="interests[]" value="swimming">
+                <label for="swimming">swimming</label>
+                <input type="checkbox" id="collecting" name="interests[]" value="collecting">
+                <label for="collecting">collecting</label>
+                <input type="checkbox" id="walking" name="interests[]" value="walking">
+                <label for="walking">walking</label>
+                <input type="checkbox" id="climbing" name="interests[]" value="climbing">
+                <label for="climbing">climbing</label>
+            </div>
 
-<form action="#" method="post" class="form-horizontal">
-    <div class="form-group">
-        <h5>Indoor Interests</h5>
-        <div class="d-inline">
-            <input type="checkbox" id="tv" name="interests[]" value="tv">
-            <label for="tv">tv</label>
-            <input type="checkbox" id="movies" name="interests[]" value="movies">
-            <label for="movies">movies</label>
-            <input type="checkbox" id="cooking" name="interests[]" value="cooking">
-            <label for="cooking">cooking</label>
-            <input type="checkbox" id="board games" name="interests[]" value="board games">
-            <label for="board games">board games</label>
-            <input type="checkbox" id="puzzles" name="interests[]" value="puzzles">
-            <label for="puzzles">puzzles</label>
-            <input type="checkbox" id="reading" name="interests[]" value="reading">
-            <label for="reading">reading</label>
-            <input type="checkbox" id="playing cards" name="interests[]" value="playing cards">
-            <label for="playing cards">playing cards</label>
-            <input type="checkbox" id="video games" name="interests[]" value="video games">
-            <label for="video games">video games</label>
+            <div class="col-xs-3 ">
+                <input class="w-25 form-control btn btn-primary"
+                       type="submit" value="Next">
+            </div>
         </div>
-        <h5>Outdoor Interests</h5>
-        <div class="d-inline">
-            <input type="checkbox" id="hiking" name="interests[]" value="hiking">
-            <label for="hiking">hiking</label>
-            <input type="checkbox" id="biking" name="interests[]" value="biking">
-            <label for="biking">biking</label>
-            <input type="checkbox" id="swimming" name="interests[]" value="swimming">
-            <label for="swimming">swimming</label>
-            <input type="checkbox" id="collecting" name="interests[]" value="collecting">
-            <label for="collecting">collecting</label>
-            <input type="checkbox" id="walking" name="interests[]" value="walking">
-            <label for="walking">walking</label>
-            <input type="checkbox" id="climbing" name="interests[]" value="climbing">
-            <label for="climbing">climbing</label>
-        </div>
-
-        <div class="col-xs-3 ">
-            <input class="w-25 form-control btn btn-primary"
-                   type="submit" value="Next">
+        </form>
         </div>
     </div>
-
-</form>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
