--- a/views/summary.html
+++ b/views/summary.html
@@ -26,6 +26,9 @@
 <p>Interests: {{ implode(@SESSION.interests) }} </p>
 <p>Biography: {{ @SESSION.bio }}</p>
 
+<p>Biography</p>
+<p></p>
+
 <div class="col-xs-3 ">
     <input class="w-25 form-control btn btn-primary"
            type="submit" value="Contact Me">
