--- a/views/personalinfo.html
+++ b/views/personalinfo.html
@@ -14,47 +14,49 @@
         <a class="nav-item nav-link" href="home">My Dating Website</a>
     </div>
 </nav>
-<div class="container">
 
-    <h1>Personal Information</h1>
-    <hr>
     <form action="#" method="post" class="form-horizontal">
-        <div class="form-group">
-            <label for="fname" class="col-sm-2 control-label">First name</label>
+        <div class="border rounded border-light bg-light col-lg-8 col-md-10 col-sm-12 m-auto text-eli" id="main">
+            <div class="container text-eli">
+                <div class="row">
+                    <div id="left" class="col-8 border">
+                        <h1 class="m-auto">Personal Information</h1>
+                        <hr>
+                        <form class="row" action="#" method="post">
+                            <label for="fname"><b>First Name</b></label>
+                            <input class="form-control m-2" name="fname" id="fname" type="text">
 
-            <div class="col-sm-4">
-                <input class="form-control" type="text" name="fname" id="fname" >
-            </div>
+                            <label for="lname"><b>Last Name</b></label>
+                            <input class="form-control m-2" name="lname" id="lname" type="text">
 
-            <label for="lname" class="col-sm-2 control-label">Last name</label>
+                            <label for="age"><b>Age</b></label>
+                            <input class="form-control m-2" name="age" id="age" type="text">
 
-            <div class="col-sm-4">
-                <input class="form-control" type="text" name="lname" id="lname" >
-            </div>
+                            <label><b>Gender</b></label>
+                            <div class="d-inline">
+                                <input type="radio" id="male" name="gender" value="male">
+                                <label for="male">Male</label>
+                                <input type="radio" id="female" name="gender" value="female">
+                                <label for="female">Female</label>
+                            </div>
 
-            <label for="age" class="col-sm-2 control-label">Age</label>
+                            <h5><b>Phone Number</b></h5>
+                            <input class="form-control m-2" name="number" id="number" type="text">
 
-            <div class="col-sm-4">
-                <input class="form-control" type="text" name="age" id="age" >
-            </div>
+                            <div class="m-2">
+                                <input class="w-25 form-control btn btn-primary"
+                                       type="submit" value="Next">
+                            </div>
+                        </form>
 
-            <label class="col-sm-2 control-label">Gender</label>
-            <div class="col-sm-4">
-                <label><input type="radio" name="gender"
-                              id="female" value="female">Female</input></label><br>
-                <label><input type="radio" name="gender"
-                              id="male" value="male">Male</input></label><br>
-            </div>
+                    </div>
 
-            <label for="number" class="col-sm-2 control-label">Phone Number</label>
-
-            <div class="col-sm-4">
-                <input class="form-control" type="text" name="number" id="number" >
-            </div>
-
-            <div class="col-xs-3 ">
-                <input class="form-control btn btn-default"
-                       type="submit" value="Next>">
+                    <!-- Note -->
+                    <div class="col-3 m-3 h-100 border justify-content bg-info bg-light">
+                        <p><b>Note:</b> All information entered is protected by our privacy policy. Profile information can only be viewed
+                            by others with your permission.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
