--- a/views/profile.html
+++ b/views/profile.html
@@ -1,12 +1,16 @@
 <!-- Zahrah al-samach, profile.html profile page -->
-<!DOCTYPE html>
+<!-- sdev328/dating/views/info.html -->
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Profile</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+    <title>Profile</title>
 </head>
 <body>
 
@@ -16,92 +20,98 @@
     </div>
 </nav>
 
-<h1>Profile</h1>
 
-<form action="#" method="post" class="form-horizontal">
-    <div class="form-group">
-        <label for="email" class="col-sm-2 control-label">Email</label>
+<div class="border border-light bg-light col-lg-8 col-md-10 col-sm-12 m-auto text-eli" id="main">
+    <div class="container text-eli">
+        <div class="row">
+            <div id="left" class="border">
+                <h1 class="m-auto">Profile</h1>
+                <hr>
+                <form class="row" action="#" method="post">
+                    <div class="col-6">
+                        <label for="email">Email</label>
+                        <input class="form-control m-2" name="email" id="email" type="text">
 
-        <div class="col-sm-4">
-            <input class="form-control" type="text" name="email" id="email" >
-        </div>
+                        <label for="state">State</label>
+                        <select class="form-control m-2" name="state" id="state" type="text">
+                            <option value="" selected="selected">Select a State</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                        </select>
 
-        <label for="state">State</label>
-        <select class="form-control" name="state" id="state" type="text">
-            <option value="" selected="selected">Select a State</option>
-            <option value="AL">Alabama</option>
-            <option value="AK">Alaska</option>
-            <option value="AZ">Arizona</option>
-            <option value="AR">Arkansas</option>
-            <option value="CA">California</option>
-            <option value="CO">Colorado</option>
-            <option value="CT">Connecticut</option>
-            <option value="DE">Delaware</option>
-            <option value="DC">District Of Columbia</option>
-            <option value="FL">Florida</option>
-            <option value="GA">Georgia</option>
-            <option value="HI">Hawaii</option>
-            <option value="ID">Idaho</option>
-            <option value="IL">Illinois</option>
-            <option value="IN">Indiana</option>
-            <option value="IA">Iowa</option>
-            <option value="KS">Kansas</option>
-            <option value="KY">Kentucky</option>
-            <option value="LA">Louisiana</option>
-            <option value="ME">Maine</option>
-            <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option>
-            <option value="MI">Michigan</option>
-            <option value="MN">Minnesota</option>
-            <option value="MS">Mississippi</option>
-            <option value="MO">Missouri</option>
-            <option value="MT">Montana</option>
-            <option value="NE">Nebraska</option>
-            <option value="NV">Nevada</option>
-            <option value="NH">New Hampshire</option>
-            <option value="NJ">New Jersey</option>
-            <option value="NM">New Mexico</option>
-            <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
-            <option value="ND">North Dakota</option>
-            <option value="OH">Ohio</option>
-            <option value="OK">Oklahoma</option>
-            <option value="OR">Oregon</option>
-            <option value="PA">Pennsylvania</option>
-            <option value="RI">Rhode Island</option>
-            <option value="SC">South Carolina</option>
-            <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option>
-            <option value="TX">Texas</option>
-            <option value="UT">Utah</option>
-            <option value="VT">Vermont</option>
-            <option value="VA">Virginia</option>
-            <option value="WA">Washington</option>
-            <option value="WV">West Virginia</option>
-            <option value="WI">Wisconsin</option>
-            <option value="WY">Wyoming</option>
-        </select>
+                        <h5>Seeking</h5>
+                        <div class="d-inline">
+                            <input type="radio" id="male" name="seeking" value="male">
+                            <label for="male">Male</label>
+                            <input type="radio" id="female" name="seeking" value="female">
+                            <label for="female">Female</label>
+                        </div>
+                    </div>
 
-        <label class="col-sm-2 control-label">Seeking</label>
-        <div class="col-sm-4">
-            <input type="radio" name="seeking"
-                          id="female" value="female">Female</input><br>
-            <input type="radio" name="seeking"
-                          id="male" value="male">Male</input><br>
-        </div>
+                    <div class="col-4">
+                        <h5>Biography</h5>
+                        <textarea class="form-control h-50" rows="5" name="bio" id="bio" type="text"></textarea>
+                    </div>
 
-        <label for="bio" class="col-sm-2 control-label">Biography</label>
-
-        <div class="col-sm-4">
-            <input class="form-control" type="text" name="bio" id="bio" >
-        </div>
-
-        <div class="col-xs-3 ">
-            <input class="form-control btn btn-default"
-                   type="submit" value="Next>">
+                    <div class="col-xs-3 ">
+                        <input class="w-25 form-control btn btn-primary"
+                               type="submit" value="Next">
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</form>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
