--- a/views/personalinfo.html
+++ b/views/personalinfo.html
@@ -23,11 +23,12 @@
                         <h1 class="m-auto">Personal Information</h1>
                         <hr>
                         <form class="row" action="#" method="post">
-                            <label for="fname"><b>First Name</b></label>
+                            <label><b>First Name</b></label>
                             <input class="form-control m-2" name="fname" id="fname" type="text">
 
-                            <label for="lname"><b>Last Name</b></label>
+                            <label><b>Last Name</b></label>
                             <input class="form-control m-2" name="lname" id="lname" type="text">
+
 
                             <label for="age"><b>Age</b></label>
                             <input class="form-control m-2" name="age" id="age" type="text">
