--- a/views/profile.html
+++ b/views/profile.html
@@ -31,6 +31,9 @@
                     <div class="col-6">
                         <label for="email">Email</label>
                         <input class="form-control m-2" name="email" id="email" type="text">
+                        <p><check if="{{ isset(@SESSION.errEmail) }}">
+                            <span class="err">{{ @SESSION.errEmail }}</span>
+                        </check></p>
 
                         <label for="state">State</label>
                         <select class="form-control m-2" name="state" id="state" type="text">
